# BVHs

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
opengl/: drawwindow.cpp  drawwindow.h  gl.cpp  gl.h  openglwindow.h
shaders/: LBVH.cs  LBVH.cs.autosave  SAH.cs  addArrays.cs  addScalarToBlock.cs  bitonicSort.cs  clearBuffer.cs  compaction.cs  compactionShader.cs  computeCenter.cs  generateMortonCodes.cs  generateRays.cs  getActiveSplits.cs  getKthBit.cs  gradShader.cs  gradShader.fs  gradShader.vs  preCompaction.cs  preCompactionShader.cs  prefixSum.cs  radixSort.cs  rayTracing.cs  recalculateBoxes.cs  relabelActiveSplits.cs  render.cs  reorderBySums.cs  reorderTriangles.cs  setParents.cs  smallSplitSAH.cs  substractArrays.cs
shaders/structs/: node.cs  triangle.cs
utils/: Hybrid.h  LBVH.h  SAH.h  compactQueue.h  computeCenters.h  computeMortonCodes.h  load_obj.h  math.h  prefixsum.h  radixsort.h  shader.cpp  shader.h  shadermanager.cpp  triangle.h
